--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -286,6 +286,7 @@
   .phoneImgDiv {
     border: 2px solid #000;
     border-radius: 10px;
+    /* g */
   }
 }
 @media only screen and (max-width: 455px) {
