--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -5,8 +5,10 @@
   overflow: hidden;
   /* border: 1px solid #f2f2f2; */
   padding: 6rem 0rem;
+  position: relative;
   
 }
+
 .container {
   position: relative; 
 
