--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -4,7 +4,8 @@
   /* border: 1px solid #3a3636; */
   width: 100%;
   overflow: hidden;
-  padding: 10rem 0rem;
+  /* padding: 10rem 0rem; */
+  margin: 10rem 0rem;
 
   /* background: rgb(205,125,205);
     background: radial-gradient(circle, rgba(205, 125, 205, 0.209) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%); */
@@ -47,7 +48,7 @@
   flex-direction: column;
   /* gap: 4rem 4rem; */
   border-radius: 15px;
-  width: 70%;
+  width: 80%;
 
   /* border: 1px solid #000; */
 }
@@ -67,6 +68,7 @@
   width: 70%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  margin: 0.5rem 0rem;
 }
 .card {
   text-align: center;
@@ -219,6 +221,7 @@
     width: 100%;
     /* border: 1px solid #000; */
     gap: 0rem 1rem;
+    margin: 1rem 0rem;
   }
   .skill_div div {
     width: 100%;
