--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -1,10 +1,11 @@
 .skillsContainer {
-  color: rgb(0, 0, 0);
+  /* color: rgb(0, 0, 0); */
   /* margin-top: 25px; */
   width: 100%;
   overflow: hidden;
   /* border: 1px solid #f2f2f2; */
-  padding: 6rem 0rem;
+  /* padding: 6rem 0rem; */
+  margin: 6rem 0rem;
   position: relative;
   
 }
@@ -26,13 +27,11 @@
 }
 .container .card
 {
-  /* position: relative;  */
+
   border-radius: 15px;
-  /* background: rgba(9, 55, 75, 0.1); */
+
   overflow: hidden;
-  /* text-align: center; */
-  
-  /* border: 1px solid rgba(10, 9, 9, 0.5); */
+
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   backdrop-filter: blur(5px);
   z-index: 900;
@@ -40,8 +39,7 @@
   justify-content:center;
   align-items: center;
   text-align: center; 
-  /* max-height: 250px; */
-  /* transition: .3s; */
+
 
 }
 .skillDiv {
@@ -58,6 +56,7 @@
   max-height: 400px;
   /* border: 1px solid #000; */
 }
+
 .card:hover  {
   box-shadow: rgba(80, 202, 246, 0.4) 0px 0px 0px 2px, rgba(80, 202, 246, 0.65) 0px 4px 6px -1px, rgba(80, 202, 246, 0.08) 0px 1px 0px inset;
  
@@ -70,7 +69,8 @@
   opacity: 0;
   transition: 0.5s;
   font-size: 1.8em;
-  color: #1b0f0f;
+  /* color: #1b0f0f; */
+  color: #31afe4;
   font-weight: 600;
   z-index: 1;
   margin-top: 8px;
@@ -93,8 +93,9 @@
  
   /* object-fit: cover; */
 }
-.name {
- 
+  .name {
+
+
 }
 .container .card:hover .skillDiv{
   transform: translateY(0px);
