--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -182,12 +182,15 @@
   margin-bottom: -1rem;
   overflow: hidden;
   align-self: flex-end;
+  z-index: 200;
 }
 .phoneImgDiv img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
+  z-index: 200;
+
 }
 /* -------------bottom end--------- */
 
