--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -3,6 +3,8 @@
   color: rgb(0, 0, 0);
   /* margin-top: 150px; */
   padding: 5rem;
+  width: 100%;
+  overflow: hidden;
   margin-bottom: 10px;
   border: border-box;
 }
