--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -8,7 +8,9 @@
   margin-bottom: 10px;
   border: border-box;
 }
-
+.content h3{
+  font-size: 1.5rem;
+}
 .container {
   width: 90%;
   margin: auto;
@@ -325,5 +327,11 @@
   .phoneImgDiv {
     border: 1px solid #000;
     border-radius: 10px;
+  }
+  .content h3{
+    font-size: 1.2rem;
+  }
+  .contentRight {
+    width: 100%;
   }
 }
