--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -16,6 +16,7 @@
   display: flex;
   margin-top: 8rem;
   align-items: center;
+  justify-content: center;
 }
 
 /* -------------left start- ------------------------ */
